[package]
name = "rev-proxy"
version = "1.2.8-alpha.1"
authors = ["Swift Navigation <dev@swiftnav.com>"]
about = "Reverse proxy middleware to handle clean shutdowns"
edition = "2018"
publish = false

[dependencies]
warp = "0.3"
warp-reverse-proxy = "0.5"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.17"
env_logger = "0.9.0"
reqwest = "0.11.10"
clap = { version = "3.2.8", features = ["derive"] }
indoc = "1"
once_cell = "1.12"

[dependencies.ctrlc]
version = "3.2"
features = ["termination", ]

[build-dependencies]
vergen = "3"
