[package]
name = "rev-proxy"
version = "1.2.10"
authors = ["Swift Navigation <dev@swiftnav.com>"]
about = "Reverse proxy middleware to handle clean shutdowns"
edition = "2018"

[dependencies]
warp = "0.3"
warp-reverse-proxy = "0.5"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["sync", "macros", "rt-multi-thread"] }
log = "0.4.20"
env_logger = "0.10.1"
reqwest = { version = "0.11.10", features = ["blocking"] }
clap = { version = "4.4.3", features = ["derive"] }
indoc = "2"
once_cell = "1.18"

[dependencies.ctrlc]
version = "3.4"
features = ["termination", ]

[build-dependencies]
vergen = "3"
